Implement style transfer based on Gatys et. al.

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ target/
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/dictionaries
@@ -105,3 +106,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Network models
+/style-transfer/models
+!/style-transfer/models/.gitkeep
+/style-transfer/runs
